tests/negative/gold/bad-literal8-test.gold
tests/negative/bad-literal8-test.toit:8:9: error: Invalid number literal
  print 0.123456_
        ^~~~~~~~~
Compilation failed
